# wg21_p2300_std_execution

./: CMakeLists.txt  P2300Config.cmake.in  std_execution.bs
examples/: Makefile
examples/schedulers/: static_thread_pool.hpp
examples/server_theme/: on_transfer.cpp  split_bulk.cpp  then_upon.cpp
include/: __utility.hpp  async_scope.hpp  concepts.hpp  execution.hpp
test/algos/adaptors/: test_let_error.cpp  test_let_stopped.cpp  test_schedule_from.cpp  test_split.cpp  test_then.cpp  test_transfer.cpp  test_when_all.cpp
test/algos/consumers/: test_sync_wait.cpp
test/detail/: test_completion_signatures.cpp
test/test_common/: schedulers.hpp
